--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "exersiceappfrontend",
   "version": "0.1.0",
+  "proxy": "https://excersizeappbackend.herokuapp.com/",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.19",
@@ -8,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "components": "^0.1.0",
+    "graphql": "^15.5.0",
     "number-format-x": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
